--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -19,6 +19,9 @@ body{
 html,body{
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    overflow-wrap: break-word;
 }
 
 #home {
@@ -27,7 +30,7 @@ html,body{
     width: 100%;
     padding: 0 1vw;
     padding-top: 41.9vh;
-    overflow:hidden;
+    overflow-x:hidden;
     
 }
 
@@ -113,11 +116,11 @@ html,body{
 
 #page1 .elem #det1 {
     height: 60px;
-    border-radius: 50px;
+    border-radius: 30px;
     width: 70%;
     position: absolute;
     z-index: 9;
-    background-color: #f9adae;
+    background-color: #ffbebfce;
 }
 #page1 .elem .dets .span{
     font-size: 18px;
@@ -145,95 +148,134 @@ html,body{
     color: beige;
 }
 #page1 .elem .dets #img1{
-    height: 25vh;
-    width: 70%;
+    height: 39vh;
+    width: 95%;
     position: absolute;
-    right:40px;
+    padding: 20px;
+    right:5px ;
+    top: 02px;
     opacity: 0;
+    /* translate: 0 -20px; */
 
 
 
 }
 #page1 .elem .dets #img2{
-    height: 25vh;
-    width: 70%;
+    height: 39vh;
+    width: 95%;
     position: absolute;
-    right:40px;
+    right:0px;
+    padding: 20px;
+    top: 0px;
 opacity: 0;
 }
 #page1 .elem .dets #img3{
-    height: 25vh;
-    padding: 3px;
-    width: 70%;
+    height: 35vh;
+    padding: 30px 35px;
+    width: 95%;
     position: absolute;
-    right:40px;
-    top: 40px;
+    right:10px;
+    top: 20px;
    opacity: 0;
 
 }
 #page1 .elem .dets #buy1{
-    font-size: 50px;
+    font-size: 25px;
     /* box-shadow: 2px 3px 5px #f9adae; */
+    /* padding: 40px 0px; */
     font-weight: 1000;
+    color: rgb(238, 141, 141);
+    text-shadow: 2px 1px 2px #000;
     position: absolute;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    top: 170px;
+    font-family: Futura-Bold;
+    top: 220px;
     right: 60px;
+    z-index: -2;
     opacity: 1;
-    translate: 0 85px;
+    translate: 0px 0px;
+}
+#click{
+    position: relative;
+    top: -30px;
+    font-size: 40px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    padding: 25px 20px;
+    right: -10px;
+    opacity: 0;
+
+}
+#click:hover{
+    opacity: 1;
 }
 #page1 .elem .dets #buy2{
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 25px;
+    color: beige;
+    font-weight: 100;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 170px;
-    right: 90px;
-    opacity: 0;
+    text-shadow: 2px 2px 2px #333;
+    top: 220px;
+    z-index: -2;
+    right: 60px;
+    font-weight: 900;
+    font-family: Futura-Bold;
+    translate: 0 0px;
+    opacity: 1;
 }
 #page1 .elem .dets #buy3{
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 25px;
+    font-family: Futura-Bold;
+    font-weight: 1000;
+    color:#f7f7f7;
+    z-index: -2;
+    text-shadow: 2px 2px 2px #000;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 170px;
-    right: 90px;
-    opacity: 0;
+    top: 220px;
+    right: 60px;
+    translate: 0 0px;
+    opacity: 1;
 }
 #page1 .elem #det2 {
     height: 60px;
-    border-radius: 50px;
+    border-radius: 30px;
     width: 70%;
     position: absolute;
+    top: 220px;
     z-index: 9;
-    background-color: #1d2927;
+    background-color: #1d2927d2;
 }
 #page1 .elem #det3 {
     height: 60px;
-    border-radius: 50px;
+    border-radius: 30px;
     width: 70%;
     position: absolute;
     z-index: 9;
-    background-color:#f5c473;
+    background-color:#f5c373e8;
 }
 #page1 .elem #det1:hover{
-height: 200px;
+height: 210px;
 cursor: pointer;
-
+top: 226px;
 }
 #page1 .elem #det2:hover{
-height:200px;
+height:210px;
+top: 220px;
 cursor: pointer;
 }
 #page1 .elem #det3:hover{
-height:200px;
+height:210px;
+top: 226px;
 cursor: pointer;
 
 
@@ -248,6 +290,7 @@ cursor: pointer;
     opacity: 1;
 }
 #page1 .elem .dets #buy1:hover{
+
 }
 #page2 {
     height: 120vh;
@@ -267,12 +310,35 @@ cursor: pointer;
     align-items: center;
     justify-content: center;
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: -10px;
+    right: -3%;
 }
 .child img{
     height: 100%;
     
    
+}
+p{
+    font-size: 15px;
+    padding: 50px 20px;
+
+}
+#location{
+    font: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+h3{
+    position: relative;
+    top: 180px;
+    right: 250px;
+    font-size: 25px;
+}
+#cherish{
+    position: relative;
+    right: 350px;
 }
 #cursor{
     height: 150px;
@@ -429,7 +495,7 @@ font-weight: 100;
     z-index: 2;
     padding: 10px 10px;
     /* margin-right: 5px; */
-    translate:0 -110%;
+    translate:0% -110%;
     padding-top: 60px;
     background-color: black;
     color: var(--background);
@@ -438,7 +504,7 @@ font-weight: 100;
 background-color: #000;
 position: relative;
 display: flex;
-left: 28.7%;
+left: 29.7%;
 top: 40px;
 font-size: 50px;
 font-family: Futura-Bold;
@@ -450,24 +516,24 @@ color:#f7f7f7;
     font-size: 13px;
     display: flex;
     position: relative;
-    left: 3.5%;
-    top: 50px;
+    left: 1.5%;
+    top: 80px;
     color: #f7f7f7
 
 }
 .heading{
     font-size: 13px;
     position: relative;
-    left: 3.5%;
-    top: 30px;
+    left: 1.5%;
+    top: 50px;
     color: #747474;
 }
 .connect2{
     font-size: 13px;
     display: flex;
     position: relative;
-    left: 9.5%;
-    top: -67px;
+    left: 7.5%;
+    top: -37px;
     color: #f7f7f7;
 
 
@@ -475,8 +541,8 @@ color:#f7f7f7;
 .heading2{
     font-size: 13px;
     position: relative;
-    left: 9.5%;
-    top: -87px;
+    left: 7.5%;
+    top: -67px;
     color: #747474;
 }
 #anchor{
@@ -490,12 +556,14 @@ color:#f7f7f7;
     left: -90px;
 }
 .hamburger-menu:has(input:checked) + .sidebar{
-    translate: -30% -7.5% ;
+    translate: -31% -6.7% ;
 }
 @media (max-width : 600px) {
     html,body{
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
+        overflow-x: hidden;
+        overflow-y: hidden;
     }
     
     
@@ -503,19 +571,18 @@ color:#f7f7f7;
        min-height: 100vh;
         width: 100%;
         padding: 0 3vw;
-        padding-top: 42vh;
-        overflow:auto;   
+        padding-top: 42vh; 
     } 
 
     
     #home h1{
         font-size: 15.8vw;
-        line-height: 7.8vw;
+        line-height: 9.8vw;
         letter-spacing: -0.8vw;
-        padding: 1vh 1vw;   
+        padding: 1vh 8vw;   
     } 
     #video-container {
-        height:25vh;
+        height:20vh;
         margin-top: 5vw;  
     }
     #video-container #play{
@@ -531,11 +598,11 @@ color:#f7f7f7;
     } 
     #video-container video{
         height : 226px ;
-        width: 360px;
+        width: 100vw;
         position : relative;
         display: flex;
         justify-content: center;
-        right: 1.8%;
+        right: 2.3%;
         padding: 0 4vw;
         object-fit: cover; 
     } 
@@ -565,6 +632,100 @@ color:#f7f7f7;
         object-fit: cover;
         
     }
+   
+    #page1 .elem .dets #img1{
+        height: 75%;
+        width: 75%;
+    position: absolute;
+    padding: 5px;
+    right:12%;
+    top: 50px;
+    opacity: 0;
+    }
+    #page1 .elem .dets #img2{
+        height: 75%;
+        width: 75%;
+    position: absolute;
+    padding: 0px;
+    right:12% ;
+    top: 40px;
+    z-index: 2;
+    opacity: 0;
+    }
+    #page1 .elem .dets #img3{
+        height: 70%;
+        width: 70%;
+    position: absolute;
+    padding: 5px;
+    right:15% ;
+    top: 45px;
+    z-index: 2;
+    opacity: 0;
+    }
+
+    .span{
+        font-size: 20px}
+    
+    #navbar #part2 #icon i{
+        font-size: 18px;
+        margin: 5px;
+        position: relative;
+        right: -60px;
+        top: 5px;
+        
+        font-weight: 100;
+        }
+    #page1 .elem .dets #buy1{
+        font-size: 25px;
+        /* box-shadow: 2px 3px 5px #f9adae; */
+        /* padding: 40px 0px; */
+        font-weight: 1000;
+        color: rgb(238, 141, 141);
+        text-shadow: 2px 1px 2px #000;
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-family: Futura-Bold;
+        top: 250px;
+        right: 50px;
+        z-index: -2;
+        opacity: 1;
+        translate: 0px 0px;
+    }
+    #page1 .elem .dets #buy2{  font-size: 25px;
+        color: beige;
+        font-weight: 100;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-shadow: 2px 2px 2px #333;
+        top: 200px;
+        z-index: -2;
+        right: 40px;
+        font-weight: 900;
+        font-family: Futura-Bold;
+        translate: 0 0px;
+        opacity: 1;
+    }
+    #page1 .elem .dets #buy3{
+        font-size: 25px;
+        font-family: Futura-Bold;
+        font-weight: 1000;
+        color:#f7f7f7;
+        z-index: -2;
+        text-shadow: 2px 2px 2px #000;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 250px;
+        right: 40px;
+        translate: 0 0px;
+        opacity: 1;
+    }
 
     #page1 .elem .dets {
         height: 40px;
@@ -576,6 +737,20 @@ color:#f7f7f7;
     
     
     }
+    #page1 .elem #det1{
+        /* height: 50px; */
+
+    }
+    #page1 .elem #det1:hover{
+        height: 230px;
+        cursor: pointer;
+        top: 268px;
+        }
+#page1 .elem #det3:hover{
+            height: 230px;
+            cursor: pointer;
+            top: 268px;
+        }
     #navbar{
         height: 8vw;
         width: 100%;
@@ -641,6 +816,63 @@ color:#f7f7f7;
         
        
     }
-    
-
+    .sidebar{
+        font-size: 40px;
+        /* position: sticky; */
+        /* transform:translate3d(50); */
+        width: 4000px;
+        min-height: 100vh;
+        z-index: 2;
+        padding: 10px 10px;
+        /* margin-right: 5px; */
+        translate:0% -110%;
+        padding-top: 60px;
+        background-color: black;
+        color: var(--background);
+    }
+    .sidebar-font{
+        background-color: #000;
+        position: relative;
+        display: flex;
+        left: 29.4%;
+        top: 40px;
+        font-size: 50px;
+        font-family: Futura-Bold;
+        font-weight: 500;
+        text-decoration: none;
+        color:#f7f7f7;
+        }
+        .connect{
+            font-size: 13px;
+            /* display: flex; */
+            position: relative;
+            /* right: 19.5%; */
+            top: 100px;
+            color: #f7f7f7
+        
+        }
+        .heading{
+            font-size: 13px;
+            position: relative;
+            left: 1.5%;
+            top: 50px;
+            color: #747474;
+        }
+        .connect2{
+            font-size: 13px;
+            display: flex;
+            position: relative;
+            left: 7.5%;
+            top: -37px;
+            color: #f7f7f7;
+        
+        
+        }
+        .heading2{
+            font-size: 13px;
+            position: relative;
+            left: 7.5%;
+            top: -67px;
+            color: #747474;
+        }
 }
